# snoopy-agent-framework

./: .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
docs/: ARCHITECTURE.md  DEMO.md  DEPLOY.md  RUN_E2E.md  SRE_DEMO.md
python/: README.md  pyproject.toml
python/snoopy/: __init__.py  agent.py  dedupe.py  memory.py  runtime.py  tools.py  tracing.py  triggers.py
scripts/: preflight.sh  setup-workers.sh
