[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snoopy"
version = "0.1.0"
description = "Distributed agent framework — Python SDK"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "snoopy-diffie" }]
dependencies = [
    "iii-sdk>=0.12.0",
    "redis>=5.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
weaviate = ["weaviate-client>=4.0.0"]
postgres = ["psycopg[binary]>=3.1"]

[tool.hatch.build.targets.wheel]
packages = ["snoopy"]
